--- a/resources/css/about/pinnacle.css
+++ b/resources/css/about/pinnacle.css
@@ -1,3 +1,6 @@
+html, body {
+    overflow-x: hidden;
+}
 body {
     background-color: #0d3553;
     color: #ffffff;
@@ -10,7 +13,7 @@ body {
    ABOUT US SECTION
 ================================*/
 .about-section {
-    background: #0a3556; /* Dark blue background */
+    background: #0a3553; /* Dark blue background */
     padding: 70px 20px;
     color: white;
 }
