--- a/resources/css/guest.css
+++ b/resources/css/guest.css
@@ -77,7 +77,7 @@ body {
     padding: 50px;
 
     background:
-        linear-gradient(135deg, #154a7c, #0d3553);
+        linear-gradient(135deg, #0d3553, #0d3553);
 
     color: #ffffff;
 
