--- a/resources/css/contact/contact.css
+++ b/resources/css/contact/contact.css
@@ -288,3 +288,11 @@ p {
         height: 200px;
     }
 }
+.success-msg {
+    color: #16a34a;
+    font-size: 14px;
+    padding: 20px 0;
+    padding-top: 0;
+    opacity: 1;
+    transition: opacity 0.6s ease;
+}
